--- a/floats.html
+++ b/floats.html
@@ -10,8 +10,8 @@
   <body>
     <div class="wrapper">
       <!-- row 1, 4 individual boxes -->
-      <div class="row1">
-        <article class="item1">
+      <div>
+        <article>
           <h3>Boston Cream Pie</h3>
           <img src="img/boston-cream.jpg" alt="Boston creme pie." />
           <p>
@@ -25,7 +25,7 @@
             >
           </p>
         </article>
-        <article class="item2">
+        <article>
           <h3>Coconut Cream Pie</h3>
           <img src="img/coconut-cream.jpg" alt="Coconut cream pie." />
           <p>
@@ -38,7 +38,7 @@
             >
           </p>
         </article>
-        <article class="item3">
+        <article>
           <h3>Key Lime Pie</h3>
           <img src="img/keylime-pie.jpg" alt="Key lime pie." />
           <p>
@@ -53,7 +53,7 @@
             >
           </p>
         </article>
-        <article class="item4">
+        <article>
           <h3>Pumpkin Pie</h3>
           <img src="img/pumpkin-pie.jpg" alt="Pumpkin pie." />
           <p>
@@ -70,8 +70,8 @@
         </article>
       </div>
       <!-- row 2, 2 boxes spanning 2 rows -->
-      <div class="row2">
-        <article class="item1">
+      <div>
+        <article>
           <h3>Key Lime Pie</h3>
           <img src="img/keylime-pie.jpg" alt="Key lime pie." />
           <p>
@@ -86,7 +86,7 @@
             >
           </p>
         </article>
-        <article class="item2">
+        <article>
           <h3>Pumpkin Pie</h3>
           <img src="img/pumpkin-pie.jpg" alt="Pumpkin pie." />
           <p>
@@ -104,8 +104,8 @@
       </div>
 
       <!-- row 4: narrow left column, wide right/content column -->
-      <div class="row3">
-        <article class="small">
+      <div>
+        <article>
           <h3>Boston Cream Pie</h3>
           <img src="img/boston-cream.jpg" alt="Boston creme pie." />
           <p>
@@ -119,7 +119,7 @@
             >
           </p>
         </article>
-        <article class="large">
+        <article>
           <h3>Coconut Cream Pie</h3>
           <img src="img/coconut-cream.jpg" alt="Coconut cream pie." />
           <p>
@@ -134,7 +134,7 @@
         </article>
       </div>
       <!-- row 4: one column -->
-      <div class="row4">
+      <div>
         <article>
           <h3>Boston Cream Pie</h3>
           <img src="img/boston-cream.jpg" alt="Boston creme pie." />
