--- a/floats.html
+++ b/floats.html
@@ -10,8 +10,8 @@
   <body>
     <div class="wrapper">
       <!-- row 1, 4 individual boxes -->
-      <div>
-        <article>
+      <div class="row">
+        <article class="col-1-2">
           <h3>Boston Cream Pie</h3>
           <img src="img/boston-cream.jpg" alt="Boston creme pie." />
           <p>
@@ -25,7 +25,7 @@
             >
           </p>
         </article>
-        <article>
+        <article class="col-1-2">
           <h3>Coconut Cream Pie</h3>
           <img src="img/coconut-cream.jpg" alt="Coconut cream pie." />
           <p>
@@ -38,7 +38,7 @@
             >
           </p>
         </article>
-        <article>
+        <article class="col-1-2">
           <h3>Key Lime Pie</h3>
           <img src="img/keylime-pie.jpg" alt="Key lime pie." />
           <p>
@@ -53,7 +53,7 @@
             >
           </p>
         </article>
-        <article>
+        <article class="col-1-2">
           <h3>Pumpkin Pie</h3>
           <img src="img/pumpkin-pie.jpg" alt="Pumpkin pie." />
           <p>
@@ -70,8 +70,8 @@
         </article>
       </div>
       <!-- row 2, 2 boxes spanning 2 rows -->
-      <div>
-        <article>
+      <div class="row">
+        <article class="col-2">
           <h3>Key Lime Pie</h3>
           <img src="img/keylime-pie.jpg" alt="Key lime pie." />
           <p>
@@ -86,7 +86,7 @@
             >
           </p>
         </article>
-        <article>
+        <article class="col-2">
           <h3>Pumpkin Pie</h3>
           <img src="img/pumpkin-pie.jpg" alt="Pumpkin pie." />
           <p>
@@ -103,9 +103,9 @@
         </article>
       </div>
 
-      <!-- row 4: narrow left column, wide right/content column -->
-      <div>
-        <article>
+      <!-- row 3: narrow left column, wide right/content column -->
+      <div class="row">
+        <article class="col-1-4">
           <h3>Boston Cream Pie</h3>
           <img src="img/boston-cream.jpg" alt="Boston creme pie." />
           <p>
@@ -119,7 +119,7 @@
             >
           </p>
         </article>
-        <article>
+        <article class="col-3">
           <h3>Coconut Cream Pie</h3>
           <img src="img/coconut-cream.jpg" alt="Coconut cream pie." />
           <p>
